--- a/web/web/coding/works/page30.html
+++ b/web/web/coding/works/page30.html
@@ -117,7 +117,7 @@
         // Plane、Cone、Cylinder、Torusがある
         geometry = new THREE.BoxGeometry(50, 50, 50);
 
-        // オブジェクトの表面のスタイルの定義
+        // オブジェクトの質感の定義
         material = new THREE.MeshPhongMaterial({
         color: 'lime'
         });
