--- a/web/web/coding/works/page32.html
+++ b/web/web/coding/works/page32.html
@@ -63,6 +63,11 @@
         */
         window.addEventListener('load', init);
 
+        /**
+        * リサイズイベント発生時に実行
+        */
+        window.addEventListener('resize', onResize);
+
         // ----------------------------------------------------------------------
 
         //親要素を取得
@@ -193,6 +198,23 @@
         renderer.render(scene, camera);
         // animate()関数を連続実行
         requestAnimationFrame(animate);
+        }
+
+        /**
+        * リサイズ時の調整関数
+        */
+        function onResize() {
+        // 親要素の幅と高さを変数化
+        let cW = parent.clientWidth;
+        let cH = parent.clientHeight;
+
+        // レンダラーのサイズを調整する
+        renderer.setPixelRatio(window.devicePixelRatio);
+        renderer.setSize(cW, cH);
+
+        // カメラのアスペクト比を正す
+        camera.aspect = cW / cH;
+        camera.updateProjectionMatrix();
         }
       </template>
     </page>
