--- a/web/web/coding/works/page31.html
+++ b/web/web/coding/works/page31.html
@@ -39,7 +39,9 @@
       </template>
 
       <template slot="html">
-        <!-- ソースとしてhtmlを記述 -->
+        &lt;div class="canvas-parent" id="parent"&gt;
+        &lt;canvas id="myCanvas"&gt;&lt;/canvas&gt;
+        &lt;/div&gt;
       </template>
 
       <template slot="css">
@@ -102,7 +104,8 @@
 
         // rendererインスタンス定義(canvas要素にWebGL使用定義)
         renderer = new THREE.WebGLRenderer({
-        canvas: document.querySelector('#myCanvas')
+        canvas: document.querySelector('#myCanvas'),
+        antialias: true
         });
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(cW, cH);
