--- a/web/web/coding/works/page32.html
+++ b/web/web/coding/works/page32.html
@@ -39,7 +39,9 @@
       </template>
 
       <template slot="html">
-        <!-- ソースとしてhtmlを記述 -->
+        &lt;div class="canvas-parent" id="parent"&gt;
+        &lt;canvas id="myCanvas"&gt;&lt;/canvas&gt;
+        &lt;/div&gt;
       </template>
 
       <template slot="css">
@@ -105,7 +107,8 @@
 
         // rendererインスタンス定義(canvas要素にWebGL使用定義)
         renderer = new THREE.WebGLRenderer({
-        canvas: document.querySelector('#myCanvas')
+        canvas: document.querySelector('#myCanvas'),
+        antialias: true
         });
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(cW, cH);
@@ -123,7 +126,6 @@
         );
         camera.position.set(cameraPos.x, cameraPos.y, cameraPos.z);
         camera.lookAt(new THREE.Vector3(0, 0, 0));
-        camera.position.set(cameraPos.x, cameraPos.y, cameraPos.z);
         scene.add(camera);
 
         // mousedragで、カメラ位置変更
@@ -158,8 +160,7 @@
 
         // マテリアルを定義
         material = new THREE.MeshStandardMaterial({
-        color: colorArray[i],
-        side: THREE.DoubleSide
+        color: colorArray[i]
         });
 
         // オブジェクトを定義
