--- a/web/web/coding/works/page34.html
+++ b/web/web/coding/works/page34.html
@@ -39,7 +39,9 @@
       </template>
 
       <template slot="html">
-        <!-- ソースとしてhtmlを記述 -->
+        &lt;div class="canvas-parent" id="parent"&gt;
+        &lt;canvas id="myCanvas"&gt;&lt;/canvas&gt;
+        &lt;/div&gt;
       </template>
 
       <template slot="css">
@@ -51,7 +53,7 @@
       </template>
 
       <template slot="js">
-
+        <!-- ソースとしてjavascriptを記述 -->
       </template>
     </page>
   </main>
