--- a/web/web/coding/works/page32.html
+++ b/web/web/coding/works/page32.html
@@ -193,6 +193,8 @@
         * 常に連続的に描画するためのアニメーション関数
         */
         function animate() {
+        // ジオメトリのグループを自転
+        rotation()
         // mousedragでカメラ位置変更
         controls.update();
         // rendererインスタンスにシーンとカメラを渡し、レンダリング
@@ -216,6 +218,17 @@
         // カメラのアスペクト比を正す
         camera.aspect = cW / cH;
         camera.updateProjectionMatrix();
+        }
+
+        /**
+        * ジオメトリのグループを自転させる関数
+        */
+        function rotation() {
+        container.rotation.set(
+        0,
+        container.rotation.y + 0.005,
+        0
+        )
         }
       </template>
     </page>
