--- a/web/web/coding/works/page12.html
+++ b/web/web/coding/works/page12.html
@@ -30,18 +30,18 @@
 <div id="c-page">
   <main class="c-page">
 
-    <page name="work11" tab="3">
+    <page name="work12" tab="3">
 
       <template slot="mainCont">
 
         <nav class="nav">
           <ul class="nav-wrap">
-            <li class="nav-list underline"><a href="#aliceblue">aliceblue</a></li>
-            <li class="nav-list"><a href="#orange">orange</a></li>
-            <li class="nav-list"><a href="#turquoise">turquoise</a></li>
-            <li class="nav-list"><a href="#pink">pink</a></li>
-            <li class="nav-list"><a href="#yellowgreen">yellowgreen</a></li>
-            <li class="nav-list"><a href="#blue">blue</a></li>
+            <li class="nav-list js-list underline"><a href="#aliceblue">aliceblue</a></li>
+            <li class="nav-list js-list"><a href="#orange">orange</a></li>
+            <li class="nav-list js-list"><a href="#turquoise">turquoise</a></li>
+            <li class="nav-list js-list"><a href="#pink">pink</a></li>
+            <li class="nav-list js-list"><a href="#yellowgreen">yellowgreen</a></li>
+            <li class="nav-list js-list"><a href="#blue">blue</a></li>
           </ul>
         </nav>
 
@@ -49,12 +49,12 @@
 
           <div class="wrap">
 
-            <section id="aliceblue" class="section aliceblue"></section>
-            <section id="orange" class="section orange"></section>
-            <section id="turquoise" class="section turquoise"></section>
-            <section id="pink" class="section pink"></section>
-            <section id="yellowgreen" class="section yellowgreen"></section>
-            <section id="blue" class="section blue"></section>
+            <section id="aliceblue" class="section js-target aliceblue"></section>
+            <section id="orange" class="section js-target orange"></section>
+            <section id="turquoise" class="section js-target turquoise"></section>
+            <section id="pink" class="section js-target pink"></section>
+            <section id="yellowgreen" class="section js-target yellowgreen"></section>
+            <section id="blue" class="section js-target blue"></section>
 
           </div>
 
